--- a/themes/Vitae/layouts/partials/head.html
+++ b/themes/Vitae/layouts/partials/head.html
@@ -1,5 +1,6 @@
 <head>
 <meta charset="UTF-8">
+<meta name="baidu-site-verification" content="codeva-vs6hGikUak" />
 {{- if .IsHome }}
 <title>{{ .Site.Title }}{{ if isset .Site.Params "pagetitle" }} - {{ .Site.Params.Pagetitle }}{{ end }}</title>
 {{- else }}
