upadte about me

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,5 +3,11 @@ import LayoutDefault from "~/layouts/LayoutDefault.astro"
 ---
 
 <LayoutDefault>
-  
+    <h1 class="post-title!">About Me</h1>
+    <ul class="ml-6 my-6" un-flex="~ col gap-5">
+        <li> I'm learning Lucene. Here is my <a href="https://github.com/apache/lucene/pulls?q=is:pr+author:tang-hi+is:closed">PR</a> for Lucene</li>
+        <li> I'm interested in database and full text search engine</li>
+        <li> Skill: C++, Java, Golang</li>
+    </ul>
+
 </LayoutDefault>
