--- a/src/layouts/LayoutDefault.astro
+++ b/src/layouts/LayoutDefault.astro
@@ -41,6 +41,7 @@ const optimizedImage = new URL(image?.src??"/placeholder.png", Astro.url).toStri
       gtag("js", new Date());
       gtag("config", "G-D5M6G40M25");
     </script>
+    <link rel="sitemap" href="/sitemap-index.xml"/>
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <SEO
