--- a/src/layouts/LayoutDefault.astro
+++ b/src/layouts/LayoutDefault.astro
@@ -32,7 +32,7 @@ const optimizedImage = new URL(image?.src??"/placeholder.png", Astro.url).toStri
 
 <html lang="en">
   <head>
-    <script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-D5M6G40M25"></script>
+    <script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-D5M6G40M25"></script>
     <script type="text/partytown">
       window.dataLayer = window.dataLayer || [];
       function gtag() {
