--- a/src/layouts/LayoutDefault.astro
+++ b/src/layouts/LayoutDefault.astro
@@ -32,15 +32,13 @@ const optimizedImage = new URL(image?.src??"/placeholder.png", Astro.url).toStri
 
 <html lang="en">
   <head>
-    <script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-D5M6G40M25"></script>
-    <script type="text/partytown">
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-D5M6G40M25");
-    </script>
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "lvhhjn5lfn");
+  </script>
     <link rel="sitemap" href="/sitemap-index.xml"/>
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
@@ -49,7 +47,7 @@ const optimizedImage = new URL(image?.src??"/placeholder.png", Astro.url).toStri
       title={title}
       description={desc}
       extend={{
-        link: [{ rel: 'icon', href: '/favicon.svg', type: 'image/svg+xml' }],
+        link: [{ rel: 'icon', href: '/favicon.jpeg', type: 'image' }],
         meta: [
           { name: "twitter:image:src", content: optimizedImage },
           { name: "twitter:image:alt", content: desc },
