--- a/src/layouts/LayoutDefault.astro
+++ b/src/layouts/LayoutDefault.astro
@@ -47,7 +47,7 @@ const optimizedImage = new URL(image?.src??"/placeholder.png", Astro.url).toStri
       title={title}
       description={desc}
       extend={{
-        link: [{ rel: 'icon', href: '/favicon.svg', type: 'image/svg+xml' }],
+        link: [{ rel: 'icon', href: 'https://hayesx-1302722143.cos.ap-singapore.myqcloud.com/img/favicon.jpeg', type: 'image/svg+xml' }],
         meta: [
           { name: "twitter:image:src", content: optimizedImage },
           { name: "twitter:image:alt", content: desc },
