add design color scheme

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,9 +5,9 @@ import LayoutDefault from "~/layouts/LayoutDefault.astro"
 <LayoutDefault>
     <h1 class="post-title!">About Me</h1>
     <ul class="ml-6 my-6" un-flex="~ col gap-5">
-        <li> I'm learning Lucene. Here is my <a href="https://github.com/apache/lucene/pulls?q=is:pr+author:tang-hi+is:closed">PR</a> for Lucene</li>
-        <li> I'm interested in database and full text search engine</li>
-        <li> Skill: C++, Java, Golang</li>
+        <li> 一个不想打工的程序员, 想要创造出自己的产品 </li>
+        <li> 感兴趣的方向: 搜索引擎, 前端, 设计, 金融</li>
+        <li> 欢迎联系我，愿意讨论任何问题👏</li>
     </ul>
 
 </LayoutDefault>
