--- a/src/layouts/LayoutDefault.astro
+++ b/src/layouts/LayoutDefault.astro
@@ -67,6 +67,14 @@ const optimizedImage = new URL(image?.src??"/placeholder.png", Astro.url).toStri
         }
       }}
     />
+
+    <script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-27FYWKG4SY"></script>
+    <script type="text/partytown">
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-27FYWKG4SY');
+    </script>
   </head>
   <body>
     <div un-max-lg="animate-fadein-down" un-lg="flex flex-row-reverse justify-between gap-4 px-8 mx-auto max-w-6xl" class="container contain-layout m-a">
