add another validate way

--- a/src/layouts/LayoutDefault.astro
+++ b/src/layouts/LayoutDefault.astro
@@ -75,6 +75,7 @@ const optimizedImage = new URL(image?.src??"/placeholder.png", Astro.url).toStri
       gtag('js', new Date());
       gtag('config', 'G-27FYWKG4SY');
     </script>
+    <meta name="baidu-site-verification" content="codeva-vs6hGikUak" />
   </head>
   <body>
     <div un-max-lg="animate-fadein-down" un-lg="flex flex-row-reverse justify-between gap-4 px-8 mx-auto max-w-6xl" class="container contain-layout m-a">
