--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -27,4 +27,29 @@ const { translate: t } = Astro.locals
     </div>
   </header>
   <slot />
+  {
+    // Only show Giscus comments on the actual post page
+    Astro.url.pathname === `/posts/${post.slug}/` && (
+      <div class="giscus mt-12">
+        <script
+          src="https://giscus.app/client.js"
+          data-repo="tang-hi/tang-hi.github.io"
+          data-repo-id="R_kgDOIrHvBQ"
+          data-category="General"
+          data-category-id="DIC_kwDOIrHvBc4Cqc5n"
+          data-mapping="title"
+          data-strict="0"
+          data-reactions-enabled="1"
+          data-emit-metadata="0"
+          data-input-position="top"
+          data-theme="preferred_color_scheme"
+          data-lang="zh-CN"
+          data-loading="lazy"
+          crossorigin="anonymous"
+          async
+        >
+        </script>
+      </div>
+    )
+  }
 </article>
